welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:9: error: ')' expected but '<-' found.
 				for {(i <- 1 to 9)
                                        ^Runner:10: error: '<-' expected but '}' found.
 							 avance() };
                                                                  ^Runner:10: error: illegal start of simple expression
 							 avance() };
                                                                   ^