welcome.lessons.welcome.loopfor.LoopCourse.scala.code

 	for (i <- 1 to 9) {
 		if (!estFaceMur) {
 			for (j <- 1 to 9) {
 				avance();
 			}
 		};
 		else 	{gauche(); 
 				for {(i <- 1 to 9)
 							 avance() };
 		};
 	}
 		
